--- a/Haskell-AOC-y2023.cabal
+++ b/Haskell-AOC-y2023.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Day01
       Lib
   other-modules:
       Paths_Haskell_AOC_y2023
@@ -35,6 +36,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 executable Haskell-AOC-y2023-exe
@@ -49,6 +51,7 @@ executable Haskell-AOC-y2023-exe
   build-depends:
       Haskell-AOC-y2023
     , base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 test-suite Haskell-AOC-y2023-test
@@ -64,4 +67,5 @@ test-suite Haskell-AOC-y2023-test
   build-depends:
       Haskell-AOC-y2023
     , base >=4.7 && <5
+    , containers
   default-language: Haskell2010
