--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                Haskell-AOC-y2023
+name:                Haskell-World
 version:             0.1.0.0
-github:              "gagandeepkalra/Haskell-AOC-y2023"
+github:              "gagandeepkalra/Haskell-World"
 license:             BSD-3-Clause
 author:              "gagandeep kalra"
 maintainer:          "gagandeepkalra1994@gmail.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/gagandeepkalra/Haskell-AOC-y2023#readme>
+description:         Please see the README on GitHub
 
 dependencies:
 - base >= 4.7 && < 5
@@ -41,7 +41,7 @@ library:
   source-dirs: src
 
 executables:
-  Haskell-AOC-y2023-exe:
+  Haskell-World-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -49,10 +49,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - Haskell-AOC-y2023
+    - Haskell-World
 
 tests:
-  Haskell-AOC-y2023-test:
+  Haskell-World-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -60,4 +60,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - Haskell-AOC-y2023
+    - Haskell-World
