--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -32,6 +32,7 @@ library
       AOC.Y_2023.Day05
       AOC.Y_2023.Day06
       AOC.Y_2024.Day01
+      AOC.Y_2024.Day02
       Lib
   other-modules:
       Paths_Haskell_World
