--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -33,6 +33,7 @@ library
       AOC.Y_2023.Day06
       AOC.Y_2024.Day01
       AOC.Y_2024.Day02
+      AOC.Y_2024.Day03
       Lib
   other-modules:
       Paths_Haskell_World
