Solved AOC 2024 Question 05

--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -35,6 +35,7 @@ library
       AOC.Y_2024.Day02
       AOC.Y_2024.Day03
       AOC.Y_2024.Day04
+      AOC.Y_2024.Day05
       Lib
   other-modules:
       Paths_Haskell_World
