--- a/stack.yaml
+++ b/stack.yaml
@@ -8,7 +8,16 @@
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
 #
-# resolver: lts-21.13
+resolver: lts-22.43
+# Download source code of all dependencies:
+
+# stack ls dependencies | \
+# grep -v "Haskell-World" | \
+# grep -E "^([^ ]+)\s+([0-9.]+)" | \
+# while read -r pkg ver; do \
+#   stack unpack "${pkg}-${ver}" --to ./.stack-work/libraries; \
+# done
+
 # resolver: nightly-2023-09-24
 # resolver: ghc-9.6.2
 #
@@ -17,8 +26,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2023-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/0.yaml
+# resolver:
+#   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/0.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
