--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -37,6 +37,7 @@ library
       AOC.Y_2024.Day04
       AOC.Y_2024.Day05
       AOC.Y_2024.Day06
+      AOC.Y_2024.Day07
       Lib
   other-modules:
       Paths_Haskell_World
