Solved AOC 2024 Question 09

--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -39,6 +39,7 @@ library
       AOC.Y_2024.Day06
       AOC.Y_2024.Day07
       AOC.Y_2024.Day08
+      AOC.Y_2024.Day09
       Lib
   other-modules:
       Paths_Haskell_World
