Solved AOC 2024 Question 10

--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -40,6 +40,7 @@ library
       AOC.Y_2024.Day07
       AOC.Y_2024.Day08
       AOC.Y_2024.Day09
+      AOC.Y_2024.Day10
       Lib
   other-modules:
       Paths_Haskell_World
