Solved AOC 2024 Question 11

--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -41,6 +41,7 @@ library
       AOC.Y_2024.Day08
       AOC.Y_2024.Day09
       AOC.Y_2024.Day10
+      AOC.Y_2024.Day11
       Lib
   other-modules:
       Paths_Haskell_World
