Solved AOC 2024 Question 13

--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -43,6 +43,7 @@ library
       AOC.Y_2024.Day10
       AOC.Y_2024.Day11
       AOC.Y_2024.Day12
+      AOC.Y_2024.Day13
       Lib
   other-modules:
       Paths_Haskell_World
