Solved AOC 2025 Question 2

--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -47,6 +47,7 @@ library
       AOC.Y_2024.Day14
       AOC.Y_2024.Day15
       AOC.Y_2025.Day01
+      AOC.Y_2025.Day02
       Lib
   other-modules:
       Paths_Haskell_World
