--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -48,6 +48,7 @@ library
       AOC.Y_2024.Day15
       AOC.Y_2025.Day01
       AOC.Y_2025.Day02
+      AOC.Y_2025.Day03
       Lib
   other-modules:
       Paths_Haskell_World
