--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -61,8 +61,9 @@ library
       array
     , base >=4.7 && <5
     , containers
+    , parallel
     , parsec
-    , split
+    , time
   default-language: Haskell2010
 
 executable Haskell-World-exe
@@ -73,14 +74,15 @@ executable Haskell-World-exe
       Paths_Haskell_World
   hs-source-dirs:
       app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
       Haskell-World
     , array
     , base >=4.7 && <5
     , containers
+    , parallel
     , parsec
-    , split
+    , time
   default-language: Haskell2010
 
 test-suite Haskell-World-test
@@ -98,6 +100,7 @@ test-suite Haskell-World-test
     , array
     , base >=4.7 && <5
     , containers
+    , parallel
     , parsec
-    , split
+    , time
   default-language: Haskell2010
