--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -49,6 +49,7 @@ library
       AOC.Y_2025.Day01
       AOC.Y_2025.Day02
       AOC.Y_2025.Day03
+      AOC.Y_2025.Day04
       Lib
   other-modules:
       Paths_Haskell_World
