--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -50,6 +50,7 @@ library
       AOC.Y_2025.Day02
       AOC.Y_2025.Day03
       AOC.Y_2025.Day04
+      AOC.Y_2025.Day05
       Lib
   other-modules:
       Paths_Haskell_World
