--- a/Haskell-World.cabal
+++ b/Haskell-World.cabal
@@ -54,6 +54,7 @@ library
       AOC.Y_2025.Day06
       AOC.Y_2025.Day07
       AOC.Y_2025.Day08
+      AOC.Y_2025.Day09
       Lib
   other-modules:
       Paths_Haskell_World
